# pytspl

./: .coverage  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  coverage.xml  demo_notebook.ipynb  edge_gp.ipynb  playground.ipynb  plotting.ipynb  postBuild  pyproject.toml  r.m  requirements.txt  test.ipynb  x.m
.github/workflows/: onpush.yml  release.yml
data/anaheim/: B1.csv  B2.csv
data/barcelona/: B2.csv
data/foreign_exchange/: B1.csv  B2t.csv  flow_FX_1538755200.csv
data/lastfm-dataset-1K/: flow.csv
data/london_street/: LondonEdges.csv  LondonNodes.csv
data/minnesota/: B2.csv  coordinate.csv
data/paper_data/: B2t.csv  edges.csv  network.tntp
data/sample_data/: B1.csv  B2.csv  coordinates.csv  edges.csv  network.tntp
data/test_dataset/: B1_chicago_sketch.csv  B2.csv
data/transportation_networks/: README.md
data/wsn/: A.csv  wsn_visualize.ipynb  zj_pos.json
doc/: conf.py  index.rst  references.bib  references.rst  requirements.txt
doc/about_us/: index.rst
doc/installation_guide/: index.rst
doc/quickstart/: index.rst
doc/tutorials/: decomposition.rst  hodge_gp.rst  index.rst  intro.rst  intro_to_filters.rst  ops_with_sc.rst  reading_custom_datasets.rst
docs/: conf.py  index.rst  modules.rst  sclibrary.filters.rst  sclibrary.io.rst  sclibrary.plot.rst  sclibrary.rst  sclibrary.simplicial_complex.rst  sclibrary.utils.rst
notebooks/: IntroductionToPyTSPL.ipynb  chebyshev_filter_design.ipynb  check.ipynb  edge_flow_denoising.ipynb  edge_gp.ipynb  eigendecomposition.ipynb  examples.ipynb  grid_based_filter_design.ipynb  hodge_gp.ipynb  hodgedecomposition.ipynb  intro.ipynb  london_network.ipynb  ls_filter.ipynb  ls_filter_design.ipynb  plotting.ipynb  read_data.ipynb  real_world_datasets.ipynb  sc_shifting.ipynb  simplical_complex.ipynb  simplicial_embeddings.ipynb  snn.ipynb  spectral_analysis.ipynb  thesis_examples.ipynb  trans_net_datasets.ipynb
notebooks/decomposition/: HodgeDecomposition.ipynb  eigendecomposition.ipynb  hodge_decomposition.ipynb  hodgedecomposition.ipynb
notebooks/filters/: ChebyshevPolynomialFilterDesign.ipynb  EdgeFlowDenoising.ipynb  FiltersLargeDatasets.ipynb  GridBasedFilterDesign.ipynb  LSFIlterDesign.ipynb  SimplicialTrendFiltering.ipynb  chebyshev_filter.ipynb  edge_flow_denoising.ipynb  filters_large_datasets.ipynb  grid_based_filter_design.ipynb  ls_filter_design.ipynb  simplicial_trend_filter.ipynb
notebooks/hodge_gp/: HodgeGP.ipynb  hodge_gp.ipynb
notebooks/reading_datasets/: BuiltInDatasets.ipynb  CustomDatasets.ipynb  custom_datasets.ipynb  formats.ipynb  simplical_complex.ipynb  transportation_datasets.ipynb
notebooks/sc/: OperationsWithSC.ipynb  operations_with_sc.ipynb
notebooks/simplicail_ops/: sc_shifting.ipynb
notebooks/simplicial_ops/: sc_shifting.ipynb  sft.ipynb  simplicial_embeddings.ipynb
pytspl/: __init__.py
pytspl/decomposition/: __init__.py  eigendecomposition.py  frequency_component.py  hodge_decomposition.py  hodgedecomposition.py
pytspl/filters/: __init__.py  base_filter.py  chebyshev_filter_design.py  edge_flow_denoising.py  grid_based_filter_design.py  ls_filter_design.py  simplicial_trend_filter.py
pytspl/hogde_gp/: __init__.py  exact_gp.py  hodge_gp_trainer.py  (+2 more)
sclibrary/: __init__.py  edge_flow.py  edge_flow_denoising.py  eigendecomposition.py  extended_graph.py  filter.py  freq_component.py  grid_based_filter_design.py  hodgedecomposition.py  ls_filter_design.py  network_reader.py  plot.py  read_data.py  read_incidence_matrix.py  sc_plot.py  simplicial_complex.py
tests/: conftest.py  test_base_filter.py  test_chebyshev_filter_design.py  test_dataset_loader.py  test_edge_flow_denoising.py  test_eigendecomposition.py  test_exact_gp.py  test_extended_graph.py  test_filter.py  test_grid_based_filter_design.py  test_hodge_gp_trainer.py  test_hodgedecomposition.py  test_kernel_serializer.py  test_kernels.py  test_ls_filter_design.py  test_network_reader.py  test_sc_generator.py  test_scbuilder.py  test_scplot.py  test_simplicial_complex.py  test_simplicial_trend_filter.py  test_transportation_loader.py
(+106 files in other folders)
