[tool.poetry]
name = "pytspl"
version = "0.1.0"
description = "A Python library for Topological Signal Processing and Learning."
authors = ["irtazahashmi <irtazahashmi@gmail.com>"]
readme = "README.md"

# Dependencies
[tool.poetry.dependencies]
python = "^3.11"
chebpy = { git = "https://github.com/chebpy/chebpy.git", branch = "master" }
cvxpy = "^1.5.1"
gpytorch = "^1.11"
gudhi = "^3.9.0"
hypernetx = "^1.2.5"
matplotlib = "^3.8.2"
networkx = "^2.8.8"
pandas = "^2.1.1"
scipy = "^1.11.4"
trimesh = "^4.0.10"
torcheval = "^0.0.7"
torchvision = "^0.18.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pyproject-flake8 = "^7.0.0"
ipykernel = "^6.29.4"
pytest = "^7.4.3"

# Testing
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["pytspl"]
branch = true
# the hodge gp module for each dataset is not tested and is not included in the coverage report
omit = ["pytspl/hogde_gp/forex/*"]

[tool.coverage.report]
show_missing = true

# Linting
[tool.flake8]
extend-ignore = ["E203", "E741"]
per-file-ignores = ['__init__.py:F401']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
